cleaned up frontend code, fixed some styling issues for responsiveness and visibility

--- a/front_end/whatsgood-app/src/index.css
+++ b/front_end/whatsgood-app/src/index.css
@@ -63,8 +63,8 @@ height: fit-content;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   margin-top: 400px;
   margin-bottom: 400px;
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-left: 12.5vw;
+  margin-right: 12.5vw;
   position: relative;
   bottom: 300px;
 }
@@ -86,13 +86,13 @@ height: fit-content;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background: url('https://i.imgflip.com/75aw7p.png'), lightgray 50% / cover no-repeat;
+  background: url('images/drangonBallScreen.png'), lightgray 50% / cover no-repeat;
   background-blend-mode: screen; background-repeat: no-repeat; background-size: cover;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   margin-top: 400px;
   margin-bottom: 400px;
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-left: 12.5vw;
+  margin-right: 12.5vw;
   position: relative;
   bottom: 300px;
 
@@ -142,6 +142,7 @@ line-height: normal;
   align-items: center;
   justify-content: center;
   color: white;
+  text-shadow: 1px 1px black;
   transform: rotate(320deg);
 }
 
